# CSE-demo

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  autobc-cse.cpp  autobc-par.cpp  autobc-seq.cpp  channel.h  common.h  element.cpp  readme.MD
common/: CMakeLists.txt  common.cpp  histodata.h  syncq.h
demo-cse/: element.cpp  histodata.cpp  main.cpp
demo-seq/: main.cpp
democse/: CMakeLists.txt  channel.h  element.cpp  element.h  main.cpp
demomw/: CMakeLists.txt  job.cpp  job.h  main.cpp  manager.cpp  manager.h  worker.cpp  worker.h
demopar/: CMakeLists.txt  main.cpp
demoseq/: .gitignore  CMakeLists.txt  main.cpp
img/: .gitignore
